# C-code

./: .gitignore  LICENSE  README.md
ELEC278-problems/: week1p2.c  week1p3.c  week3p2.c  week4p2.c
projects/ELEC278-assignment/: CMakeLists.txt  array-stack.c  interface.c  interface.h  model.c  model.h  stack.h  testrunner.c  testrunner.h  tests.c
projects/ELEC278-assignment/.cache/clangd/index/: array-stack.c.BD4380A36EC65816.idx  (+10 more)
projects/ELEC278-lab1/: main.c
projects/ELEC278-lab1/lab-info/: mingw64-13.1.0.zip.lnk
projects/ELEC278-lab2/: CMakeLists.txt  main.c
projects/ELEC278-lab3/: array-stack.c  stack.h
projects/ELEC278-lab3/test-cases/: case1.txt
projects/ELEC278-lab4/: CMakeLists.txt  engine.c  engine.h  main.c  queue.c  queue.h  test_output.txt  util.c  util.h
projects/ELEC278-lab4/test-cases/: case0.txt  case1.txt  case2.txt  case3.txt  case4.txt
projects/ELEC278-lab5/: main.c
projects/ELEC278-lab6/: main.c
projects/ELEC278-problems/: CMakeLists.txt  heap.c  heap.h  week10p1.c  week10p2.c  week11p1.c  week12p1.c  week2p3.c  week3p1.c  week7p1.c  week9p1.c  week9p2.c
projects/ELEC290-P0/: CMakeLists.txt  results.csv  rps_constants.h  strategies.c  strategies.h  strategy_compare.c
projects/discrete_finite_automaton_runner/: README.md
projects/discrete_finite_automaton_runner/include/: discrete_finite_automaton.h
projects/discrete_finite_automaton_runner/src/: discrete_finite_automaton.c
projects/discrete_finite_automaton_runner/test/: test_dfa.c
projects/elec278-lab3/: CMakeLists.txt  array-stack.c  demo.c  demo.h  linked-stack.c  main.c  stack.h
projects/elec278-lab3/test-cases/: case2.txt  case3.txt
projects/elec278-problems/: CMakeLists.txt  quiz2.c  week1p2.c  week1p3.c  week2p2.c  week2p3.c  week5p2.c
projects/elec278-problems/.cph/: .week1p2.c_2ac7e3c2eb37fc624a32fdd70bddc19a.prob  .week1p3.c_05f79a4da1120aec3d1f8c20b056e09b.prob
projects/email-address-parser/: README.md
projects/email-address-parser/src/: email_address_parser.c
projects/equal_number_as_and_bs/: README.md
projects/equal_number_as_and_bs/src/: dfa_implementation.c
projects/justify/: CMakeLists.txt  justify.c
projects/obfuscation/: README.md  example.c  obfuscation.c  obfuscation.h
projects/self-replication/: Makefile  escape.c  escape.h  put_in_first_empty_double_quotes.c  quine.c  replication.c  replication.txt  self_replication_attempts.md  template.c
projects/simple-push-down-automaton-simulation/: README.md  main.c
undodir/: C%%Users%Hendrix%github%c-code%projects%ELEC278-assignment%array-stack.c
(+1 files in other folders)
