cmake_minimum_required(VERSION 3.27)
project(problems C)

set(CMAKE_C_STANDARD 11)

# add_executable(week1p2 week1p2.c)
# add_executable(week1p3 week1p3.c)

# add_executable(week2p2 week2p2.c)
# add_executable(week2p3 week2p3.c)

# add_executable(week3quiz2 quiz2.c)

# add_executable(week3p1 week3p1.c)
# add_executable(week3p2 week3p2.c)

# add_executable(week4p2 week4p2.c)

# add_executable(week5p2 week5p2.c)

# add_executable(week7p1 week7p1.c)

# add_executable(week9p1 week9p1.c)
add_executable(week9p2 week9p2.c)